[#460] Backport Maven/Resolver changes from 3.x